=======
CHANGES
=======

1.1
===

(supports Zope 3.4/Zope 2.11/ZODB 3.8)

1.1.1
-----

- Fix name errors caught by pyflakes.

1.1.0
-----

- adjust to BTrees changes in ZODB 3.8 (thanks Juergen Kartnaller)

- converted buildout to rely exclusively on eggs  

1.0
===

(supports Zope 3.3/Zope 2.10/ZODB 3.7)

1.0.2
-----

- Incorporated tests and bug fixes to relationship containers from
  Markus Kemmerling:

  * ManyToOneRelationship instantiation was broken
  
  * The `findRelationships` method misbehaved if both, `source` and `target`,
    are not None, but `bool(target)` evaluated to False.
    
  * ISourceRelationship and ITargetRelationship had errors.

1.0.1
-----

(supports Zope 3.3/Zope 2.10/ZODB 3.7)

- Incorporated test and bug fix from Gabriel Shaar:

  if the target parameter is a container with no objects, then
  `shared.AbstractContainer.isLinked` resolves to False in a bool context and
  tokenization fails.  `target and tokenize({'target': target})` returns the
  target instead of the result of the tokenize function.

- Made README.txt tests pass on hopefully wider set of machines (this was a
  test improvement; the relationship index did not have the fragility).
  Reported by Gabriel Shaar.

1.0
---

(supports Zope 3.3/Zope 2.10/ZODB 3.7)

Initial release